<?xml version="1.0"?>
<package format="2">
  <name>visp_ros</name>
  <version>1.0.0</version>
    <description>
     An extension of ViSP library that interfaces ROS into usual ViSP classes and a basket of generic ros nodes based on ViSP.
  </description>
  <author>Francois Pasteau</author>
  <author>Fabien Spindler</author>
  <author>Gatien Gaumerais</author>
  <author>Alexander Oliva</author>
  <license>GPLv2</license>
  <url>http://ros.org/wiki/visp_ros</url>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>visp_bridge</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>
  <depend>liborocos-kdl-dev</depend>
  <build_depend>message_generation</build_depend>
  <depend>kdl_parser</depend>

  <exec_depend>image_view</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
     <rosdoc config="${prefix}/rosdoc.yaml" />
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
