<?xml version="1.0"?>
<package>
  <name>tutorial_pioneer_node</name>
  <version>1.0.0</version>
  <description>
    Shows how to implement visual servoing schemes in order 
    to control a Pioneer robot.
  </description>

  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <author email="Fabien.Spindler@inria.fr">Fabien Spindler</author>

  <license>GPLv2</license>

  <url type="repository">git://github.com/lagadic/demo_pioneer.git</url>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visp_ros</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visp_ros</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
